in createCompleteThread(), add a crash guard in the case there is no displayReference, like when the server connection is lost.

BUG: 311787
FIXED-IN: 4.9.5
MERGE: 4.10, master